--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,3 +12,38 @@
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+#image-show {
+  height: 13vh;
+  width: 100%;
+  object-fit: cover;
+}
+
+#image-front {
+  width: 100%;
+  height: 60vh;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+#category-row:nth-child(odd) {
+  background-color: #f5f5f5;
+}
+
+#movie_form {
+  display: none;
+}
+
+#actor-img, #movie-img {
+  width: 40px;
+  height: 48px;
+}
+
+a {
+  text-decoration: none;
+  color: #899491;
+}
+
+a:hover {
+  text-decoration: none;
+}
