--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,8 +9,12 @@
 @import '~bootstrap/scss/bootstrap';
 
 .navbar-laravel {
-  background-color: #fff;
+  background-color: #434343 !important;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.nav-link, .navbar-brand {
+  color: #ffffff !important;
 }
 
 #image-show {
