--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -8,6 +8,9 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+// Font awesome
+@import '~font-awesome/scss/font-awesome.scss';
+
 body {
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -84,9 +87,13 @@ p {
 
 #image-front {
   width: 100%;
-  height: 60vh;
+  height: 40vh;
   margin-top: 15px;
   margin-bottom: 15px;
+  opacity: .7;
+  &:hover {
+    opacity: 1;
+  }
 }
 
 #category-row:nth-child(odd) {
@@ -146,6 +153,13 @@ form .search-btn {
   }
 }
 
+.fb-icon:hover {
+  color: #4267b2 !important;
+}
 
+.cast-image {
+  width: 60px;
+  height: auto;
+}
 
 @import "~select2/src/scss/core.scss";
