--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -162,4 +162,8 @@ form .search-btn {
   height: auto;
 }
 
+.alert-success {
+  color: #155724 !important;
+}
+
 @import "~select2/src/scss/core.scss";
