--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -87,7 +87,7 @@ p {
 
 #image-front {
   width: 100%;
-  height: 40vh;
+  height: 30vh;
   margin-top: 15px;
   margin-bottom: 15px;
   opacity: .7;
@@ -164,6 +164,10 @@ form .search-btn {
 
 .alert-success {
   color: #155724 !important;
+}
+
+.popular {
+  background-color: #dedede;
 }
 
 @import "~select2/src/scss/core.scss";
