--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13235,9 +13235,25 @@ form .search-btn:hover {
   background-color: #dedede;
 }
 
+#suggestion {
+  z-index: 9999;
+  position: absolute;
+  width: 400px;
+  display: none;
+}
+
 #suggestion li:hover {
   background-color: #d3d9df;
   color: #444444 !important;
+}
+
+.search {
+  width: 400px !important;
+}
+
+#suggestion-img {
+  width: 30px;
+  height: 40px;
 }
 
 .select2-container {
